[gd_scene load_steps=6 format=3 uid="uid://ktom0bynvokl"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_jy5lc"]
[ext_resource type="Script" path="res://Player/reticle.gd" id="2_o0h6c"]
[ext_resource type="PackedScene" uid="uid://bl6wxsvnvh6e8" path="res://Weapon/full_ak.tscn" id="4_fretk"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6wklf"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qkg8f"]

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 5
script = ExtResource("1_jy5lc")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_6wklf")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qkg8f")

[node name="Neck3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Neck3"]
cull_mask = 1048573

[node name="RayCast3D" type="RayCast3D" parent="Neck3/Camera3D"]

[node name="playerLight" type="SpotLight3D" parent="Neck3/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0791379, -0.0446202, 0.279393)
layers = 2
spot_range = 2.0
spot_angle = 30.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck3/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Neck3/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="GunCam" type="Camera3D" parent="Neck3/Camera3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.237203, 0)
cull_mask = 1047554

[node name="full_ak" parent="Neck3/Camera3D" instance=ExtResource("4_fretk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.316968, -0.576802, -1.11841)

[node name="SpotLight3D" type="SpotLight3D" parent="Neck3/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.058)
light_color = Color(1, 0.941176, 0.588235, 1)
light_energy = 3.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 2.0
light_specular = 1.0
distance_fade_enabled = true
spot_range = 8.0
spot_attenuation = 1.23
spot_angle = 20.0
spot_angle_attenuation = 1.74

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HitRect" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0
mouse_filter = 1
color = Color(1, 0, 0, 0.0784314)

[node name="Reticle" type="CenterContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_o0h6c")

[node name="Top" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0
